package com.codeheadsystems.rules.model;

/**
 * The interface Rule file.
 */
public interface RuleFile {
}
