@startuml

title Rule Domain Model

class RuleFile {}
class File {
    {field} path
}
class VelocityFiles {}
class RuleSet {
    {field} RuleSetIdentifier
}
class Event {
  {field} EventIdentifier
  {field} timestamp
  {field} shadow
}
class Facts {}
class ExecutionResults {}
class Rule {
    {field} RuleIdentifier
}
class Velocity{
    {field} identifierPath
    {field} aggregationPath
    {field} window
}

Event *--> "1" Facts : contains
Event -right->  ExecutionResults

ExecutionResults -right-> "1" RuleSet

RuleSet o--> "*" Rule : contains
RuleSet o--> "*" Velocity : contains
Rule o--> "*" RuleFile : contains
Velocity o--> "*" VelocityFiles : contains
File <|-- VelocityFiles
File <|-- RuleFile


@enduml